{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 445,
  "lineage": "68470e5d-3df0-ce09-32ba-50f034770008",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "tf-vpc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:internet-gateway/igw-056d8e79e8e7e9454",
            "id": "igw-056d8e79e8e7e9454",
            "owner_id": "253490768279",
            "tags": {
              "Name": "tf-vpc-igw"
            },
            "tags_all": {
              "Name": "tf-vpc-igw"
            },
            "vpc_id": "vpc-0c5cef68b39351714"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "tf-vpc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:route-table/rtb-01669600a47ef1d8d",
            "id": "rtb-01669600a47ef1d8d",
            "owner_id": "253490768279",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-vpc-database-rt"
            },
            "tags_all": {
              "Name": "tf-vpc-database-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5cef68b39351714"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "tf-vpc",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:route-table/rtb-0bcc251ee88740fde",
            "id": "rtb-0bcc251ee88740fde",
            "owner_id": "253490768279",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-056d8e79e8e7e9454",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-vpc-public-rt"
            },
            "tags_all": {
              "Name": "tf-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c5cef68b39351714"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-subnet-a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c14294d68ec2a1d7",
            "route_table_id": "rtb-0bcc251ee88740fde",
            "subnet_id": "subnet-0e7f7dc13a5186b31"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.subnets",
            "module.network.aws_vpc.terraform"
          ]
        },
        {
          "index_key": "public-subnet-b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bb411c8e11f4db7",
            "route_table_id": "rtb-0bcc251ee88740fde",
            "subnet_id": "subnet-0651ab109bb945ffa"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.subnets",
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-subnet-a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:subnet/subnet-0e7f7dc13a5186b31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7f7dc13a5186b31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253490768279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-a"
            },
            "tags_all": {
              "Name": "public-subnet-a"
            },
            "vpc_id": "vpc-0c5cef68b39351714"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        },
        {
          "index_key": "public-subnet-b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:subnet/subnet-0651ab109bb945ffa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0651ab109bb945ffa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "253490768279",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-b"
            },
            "tags_all": {
              "Name": "public-subnet-b"
            },
            "vpc_id": "vpc-0c5cef68b39351714"
          },
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "tf-vpc",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:vpc/vpc-0c5cef68b39351714",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03ded08ce9d679e41",
            "default_route_table_id": "rtb-03bc0499b2758a4ff",
            "default_security_group_id": "sg-0aa58f42e68db4540",
            "dhcp_options_id": "dopt-04c18528da53c85f3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c5cef68b39351714",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03bc0499b2758a4ff",
            "owner_id": "253490768279",
            "tags": {
              "Name": "tf-vpc"
            },
            "tags_all": {
              "Name": "tf-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "test-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:security-group/sg-0a13d3f8894168883",
            "description": "test",
            "egress": [],
            "id": "sg-0a13d3f8894168883",
            "ingress": [],
            "name": "test-sg",
            "name_prefix": "",
            "owner_id": "253490768279",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c5cef68b39351714"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        },
        {
          "index_key": "test-sg-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:security-group/sg-032390ac008f7118a",
            "description": "test",
            "egress": [],
            "id": "sg-032390ac008f7118a",
            "ingress": [],
            "name": "test-sg-2",
            "name_prefix": "",
            "owner_id": "253490768279",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c5cef68b39351714"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "test-sg--1--internal",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:security-group-rule/sgr-0bb7c250f7515559c",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0bb7c250f7515559c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a13d3f8894168883",
            "security_group_rule_id": "sgr-0bb7c250f7515559c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.all"
          ]
        },
        {
          "index_key": "test-sg--1--public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:security-group-rule/sgr-0e1ab58505b5c9f85",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0e1ab58505b5c9f85",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a13d3f8894168883",
            "security_group_rule_id": "sgr-0e1ab58505b5c9f85",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.all"
          ]
        },
        {
          "index_key": "test-sg-2--1--internal",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:security-group-rule/sgr-0022e21f3cecc7755",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0022e21f3cecc7755",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-032390ac008f7118a",
            "security_group_rule_id": "sgr-0022e21f3cecc7755",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.all"
          ]
        },
        {
          "index_key": "test-sg-2--1--public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:security-group-rule/sgr-0ddafd6175f6b360e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ddafd6175f6b360e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-032390ac008f7118a",
            "security_group_rule_id": "sgr-0ddafd6175f6b360e",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.all"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "test-sg--1--internal",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:security-group-rule/sgr-09006d61b6254a032",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-09006d61b6254a032",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a13d3f8894168883",
            "security_group_rule_id": "sgr-09006d61b6254a032",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.all"
          ]
        },
        {
          "index_key": "test-sg--1--public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:security-group-rule/sgr-0972c2b629519ffb3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0972c2b629519ffb3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0a13d3f8894168883",
            "security_group_rule_id": "sgr-0972c2b629519ffb3",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.all"
          ]
        },
        {
          "index_key": "test-sg-2--1--internal",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:security-group-rule/sgr-0debbd3d8124b9bf1",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0debbd3d8124b9bf1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-032390ac008f7118a",
            "security_group_rule_id": "sgr-0debbd3d8124b9bf1",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.all"
          ]
        },
        {
          "index_key": "test-sg-2--1--public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:253490768279:security-group-rule/sgr-074c88250b31351c4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-074c88250b31351c4",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-032390ac008f7118a",
            "security_group_rule_id": "sgr-074c88250b31351c4",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.all"
          ]
        }
      ]
    },
    {
      "module": "module.vms",
      "mode": "managed",
      "type": "aws_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af9b40b1a16fe700",
            "arn": "arn:aws:ec2:eu-central-1:253490768279:instance/i-07a9cc5a551f1d35b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07a9cc5a551f1d35b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0605b42c4568ec268",
            "private_dns": "ip-10-0-1-80.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.80",
            "public_dns": "ec2-3-75-222-100.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.75.222.100",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0074901be6e57e52c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e7f7dc13a5186b31",
            "tags": {
              "Name": "instance-1"
            },
            "tags_all": {
              "Name": "instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a13d3f8894168883"
            ]
          },
          "dependencies": [
            "module.network.aws_subnet.subnets",
            "module.network.aws_vpc.terraform",
            "module.security_groups.aws_security_group.all",
            "module.vms.aws_key_pair.ssh-key"
          ]
        }
      ]
    }
  ]
}